fix(android): support API 26 and test real WebView bridge rendering